.provarCaches/00D410000011HE0EAM/objects/rstk__icips__c.object
<CustomObject>
    <description>icips__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icips_icitem__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  rstk__icips_pjproj__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  rstk__icips_sysite__r.rstk__externalid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__icips_icitem__r.rstk__icitem_item__r.rstk__peitem_item__c &amp; &apos;_&apos; &amp;  rstk__icips_pjproj__r.rstk__pjproj_proj__c &amp; &apos;_&apos; &amp;  rstk__icips_sysite__r.rstk__sysite_site__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icips_icitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Inventory Item Master</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipName>icipss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icips_pjproj__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project Master</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipName>icipss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icips_qtyoutstdg_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Outstanding - SOORDDMD</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icips_qtyoutstdg_4__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Outstanding - PODMD</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icips_qtyoutstdg_6__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Outstanding - WOORDDMD</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icips_qtyoutstdg_m__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Outstanding – WOCST</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icips_qtyoutstdg_p__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Outstanding – POLINE</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icips_qtyoutstdg_r__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Outstanding - ICREQ</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icips_sysite__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Site Master</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipName>icipss</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Z_OBSOLETE</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_OBSOLETE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>